infra/envoy-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external-gateway-class
  namespace: gateway-system
spec:
  controllerName: 'gateway.envoyproxy.io/gatewayclass-controller'
