infra/envoy-gateway/httproute-vault.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/provider: public
  name: vault
  namespace: vault
spec:
  hostnames:
    - vault.crypto-haven.fhbgl.study
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: vault-ui
          port: 8200
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
